# darkchess-robot

./: .gitignore  Dockerfile  README.md  app.py  brain_train.ipynb  config.py  eye_train.ipynb  globfile.py  main.py  pyproject.toml  requirements.txt  test.py
arm/: Form1.cs  README.md  __init__.py  arm.py  utils.py
arm/3D_models/catcher/: catcher_gear.stl  catcher_platform.stl  catcher_support.stl  darkchess.stl  flip_passive.stl  flip_proactive.stl
arm/3D_models/remote/: remote_box.stl
arm/3D_models/skeleton/: cover_base.stl  covered_connecter.stl  double_board_connecter.stl  motor_base.stl  pipe.stl
arm/RPi/: cmd.py  py2A1motor.py
arm/arduino/: arduino-cli.yaml  arm_atmega1280.ino  motor_debug.ino  platformio.ini  receiver_esp8266.ino  remote_esp8266.ino  servo_debug.ino
arm/control/: index.html
arm/control/position/: config.py
arm/firmware/: README.md  arduino-cli.yaml
arm/firmware/arm_atmega1280/: arm_atmega1280.ino
arm/firmware/receiver_esp8266/: receiver_esp8266.ino
arm/firmware/remote_esp8266/: remote_esp8266.ino
arm/hardware/: README.md
arm/hardware/3D-models/catcher/: beveled_gear.stl  catcher_catch.stl  catcher_support_catch.stl  flip_cylinder.stl  flip_support_fixed.stl
arm/hardware/3D-models/platform/: PhoneCamera-bracket.stl  circuit-board-case.stl  platform-bracket.stl
arm/hardware/3D-models/remote/: cover_remote.stl
arm/hardware/3D-models/skeleton/: double_clip_connecter.stl  double_pipe_board_connecter.stl
arm/position/: 1.txt  config.py
arm/static/: index.html
assets/arm-coordinate/: 1.txt  2.txt
brain/: __init__.py  agent.py  arena.py  brain.py  utils.py
brain/agent/: __init__.py  agent.py  base.py  drl.py  drl_mcts.py  ql.py  ql_mcts.py
brain/agent/learning/: __init__.py  base.py  drl.py  drl_mcts.py  qlearning.py  qlearning_mcts.py
brain/agent/utils/: mcts.py  network.py
eye/: __init__.py  eye.py  imgproc.py  imgrecg.py  train.ipynb  utils.py
eye/train/: train.ipynb
