[project]
authors = [{name = "ryanlinjui", email = "ryanlinjui@gmail.com"}]
description = "A real robotic arm playing darkchess with you."
name = "darkchess-robot"
requires-python = "== 3.8.*"
version = "0.1.0"
dependencies = [
    "opencv-python>=4.10.0.84,<5", 
    "pydot>=3.0.2,<4"
, "librosa>=0.9.2,<0.11", "soundfile>=0.13.1,<0.14"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
notebook = ">=7.2.2,<8"
huggingface_hub = ">=0.26.1,<0.27"
pillow = ">=9.4.0,<11"
flask = ">=3.0.3,<4"
matplotlib = ">=3.5.3,<4"

[tool.pixi.target.linux-64.dependencies]
tensorflow-gpu = ">=2.6.2,<3"
datasets = "<2.1"

[tool.pixi.target.osx-arm64.dependencies]
tensorflow = ">=2.6.2,<3"
datasets = ">=2.13.1,<3"
