[project]
authors = [{name = "ryanlinjui", email = "ryanlinjui@gmail.com"}]
description = "A self-learning robotic arm plays Darkchess with you in Real-World."
name = "darkchess-robot"
requires-python = "== 3.8.*"
version = "0.1.0"
dependencies = [
    "opencv-python>=4.10.0.84,<5",
    "pydotplus>=2.0.2,<3",
    "tqdm"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
notebook = ">=7.2.2,<8"
huggingface_hub = ">=0.26.1,<0.27"
pillow = ">=9.4.0,<11"
flask = ">=3.0.3,<4"
matplotlib = ">=3.5.3,<4"

[tool.pixi.target.linux-64.dependencies]
tensorflow-gpu = ">=2.6.2,<3"
datasets = "<2.1"

[tool.pixi.target.osx-arm64.dependencies]
tensorflow = ">=2.6.2,<3"
datasets = ">=2.13.1,<3"
